fix: modal text overflow

--- a/src/components/modal/style.scss
+++ b/src/components/modal/style.scss
@@ -58,6 +58,7 @@
         flex-direction: column;
         align-items: center;
         width: 50%;
+        overflow: auto;
 
         padding: 20px;
 
@@ -122,6 +123,7 @@
         }
       }
       .modal-footer {
+        overflow: auto;
       }
     }
   }
